--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
             <div class="cbp-l-project-subtitle text-center">Primera semana de laboratoria.</div>
             <div class="row">
                 <div class="col-md-6">
-                    <img src="agency1.jpg" style="width: 100%;">
+                    <img src="images/agency1.jpg" style="width: 100%;">
                 </div>
                 <div class="col-md-6">
-                    <p class="descrip-view">divdivdi vdivdivdivdi vdivdivdivdi vdivdivdivdi vdivdivdivdivdivdi vdivdivdivdiv divdivdiv divdivdivdi vdivdivdivdivdivdivdivdiv divdivdivdivdiv divdivdi vdivdivd ivdivdi vdivdi vdivdivdivdivdivdivdivdivdivdivdivdivdi vdivdivdivdivdivdivdivdivdi vdivdivdiv divd  ivdivdi vdivdi vdivdi  vdivdivdivdivdivd ivdivdi vdivdivdivd ivdivdivdivdi vdivdivdiv divdivdivdivd ivdivdivdivdivdivdivdivdi vdivdivdivdivdivd iv divdiv divdi vdivdivdivdiv divdivdivdi vdiv divdivdivdivdiv divdi ivdivdivdiv divdiv divdiv divdivdiv divdivdivdivdivdivdivdiv divdiv divdi vdivdivd i vdivdivd ivdivdivdivdivd ivdivdivdi  vdi vdivdivdivdivdivdivdivdivdivdi vdivdivdivdivdivdivdiv divdivdivd ivdivd ivdivdi vdivdivdivdivdivdiv</p>  
+                    <p class="descrip-view">El presente proyecto fue desarrollado durante las primeras semanas de aprendizaje en el programa intensivo de laboratoria. Es una página de cuatro vistas. Desarrollada con Html5 y Css3 además de una grilla basada en porcentajes para estructurar la página en columnas y filas de manera más ordenada.</p>  
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 text-right">
-                    <button type="button" class="btn btn-default"><i class="fa fa-github"></i></button>
+                    <a href="http://sazabache.github.io/escuela-de-danza/"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye"></i></button></a>
                 </div>
                 <div class="col-md-6 text-left">
-                    <button type="button" class="btn btn-default"><i class="fa fa-eye"></i></button>
+                    <a href="https://github.com/sazabache/escuela-de-danza"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github"></i></button></a>
                 </div>
             </div>
         </div>
