--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             </div>
             <div class="row">
                 <div class="col-md-6 text-right">
-                    <a href="http://sazabache.github.io/escuela-de-danza/"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye"></i></button></a>
+                    <a href="http://sazabache.github.io/escuela-de-danza/" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye">Mira la web</i></button></a>
                 </div>
                 <div class="col-md-6 text-left">
-                    <a href="https://github.com/sazabache/escuela-de-danza"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github"></i></button></a>
+                    <a href="https://github.com/sazabache/escuela-de-danza" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github">Mira el código</i></button></a>
                 </div>
             </div>
         </div>
