--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
                     <p class="descrip-view">El presente proyecto fue desarrollado durante las primeras semanas de aprendizaje en el programa intensivo de laboratoria. Es una página de cuatro vistas. Desarrollada con Html5 y Css3 además de una grilla basada en porcentajes para estructurar la página en columnas y filas de manera más ordenada.</p>  
                 </div>
             </div>
-            <div class="row">
+            <div class="row viewmore">
                 <div class="col-md-6 text-right">
-                    <a href="http://sazabache.github.io/escuela-de-danza/" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye">Mira la web</i></button></a>
+                    <a href="http://sazabache.github.io/escuela-de-danza/" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye"></i><span>Mira la web</span></button></a>
                 </div>
                 <div class="col-md-6 text-left">
-                    <a href="https://github.com/sazabache/escuela-de-danza" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github">Mira el código</i></button></a>
+                    <a href="https://github.com/sazabache/escuela-de-danza" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github"></i><span>Mira el código</span></button></a>
                 </div>
             </div>
         </div>
