--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
             <div class="cbp-l-project-title text-center">Escuela de Danza</div>
             <div class="cbp-l-project-subtitle text-center">Primera semana de laboratoria.</div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <img src="images/agency1.jpg" style="width: 100%;">
                 </div>
-                <div class="col-md-6">
-                    <p class="descrip-view">El presente proyecto fue desarrollado durante las primeras semanas de aprendizaje en el programa intensivo de laboratoria. Es una página de cuatro vistas. Desarrollada con Html5 y Css3 además de una grilla basada en porcentajes para estructurar la página en columnas y filas de manera más ordenada.</p>  
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <p class="descrip-view">El presente proyecto corresponde a un ejercicio de las primeras semanas de aprendizaje en el programa intensivo de laboratoria. Es una página de cuatro vistas, que tiene como tema central el baile y/o danza que se enseñan en una academia del mismo rubro. Desarrollada con Html5 y Css3 además de una grilla basada en porcentajes para estructurar la página en columnas y filas de manera más ordenada.</p>  
                 </div>
             </div>
             <div class="row viewmore">
-                <div class="col-md-6 text-right">
+                <div class="col-md-6 col-sm-6 col-xs-6 text-right">
                     <a href="http://sazabache.github.io/escuela-de-danza/" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-eye"></i><span>Mira la web</span></button></a>
                 </div>
-                <div class="col-md-6 text-left">
+                <div class="col-md-6 col-sm-6 col-xs-6 text-left">
                     <a href="https://github.com/sazabache/escuela-de-danza" target="_blank"><button type="button" class="btn btn-default icon-view"><i class="fa fa-github"></i><span>Mira el código</span></button></a>
                 </div>
             </div>
