--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
             <div class="cbp-l-project-subtitle text-center">Primera semana de laboratoria.</div>
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <img src="images/proj-1.png" style="width: 100%;">
+                    <img src="images/proj-1-01.png" style="width: 100%;">
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <p class="descrip-view">El presente proyecto corresponde a un ejercicio de las primeras semanas de aprendizaje en el programa intensivo de laboratoria. Es una página de cuatro vistas, que tiene como tema central el baile y/o danza que se enseñan en una academia del mismo rubro. Desarrollada con Html5 y Css3 además de una grilla basada en porcentajes para estructurar la página en columnas y filas de manera más ordenada.</p>  
